2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/worker/worker.py:
	  After some timeout (this should be made configurable somehow), if
	  a job has refused to shut down, SIGKILL it.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/disker/disker.py:
	  Rename file_fd to file; it's not an fd.
	  Where we claim to close the file, close it.
	  Don't call reactor methods from non-reactor threads; use
	  callFromThread.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Remove now-unused import to prevent complaints from pychecker.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  client-added is called only from the reactor thread, so we don't
	  need a decoupling queue.

	  cliend-fd-removed is called by non-reactor threads, so handle this 
	  with reactor.callFromThread() rather than reinventing that via a 
	  periodic callLater checking a queue.

	  Everything that wants to update UIStates is now done in the reactor
	  thread, so just call update_ui_state, rather than setting a flag and
	  checking it periodically.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Don't update uiState objects from non-reactor threads.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Do not update UI state objects from non-reactor threads; doing so is
	  very unsafe.

	  Ensure we only operate on the FeedComponent._probe_ids dict with
	  'atomic' python operations.
	  
	  Do not call any reactor methods other than reactor.callFromThread
	  from non-reactor threads. _checkEater calls many reactor threads and
	  also mutates other internal state; call this through
	  reactor.callFromThread too.

	  Eater reconnection should now be threadsafe.

	* flumotion/test/test_feedcomponent010.py: